# Ollama-R-cybersec-LLM-

./: README.md  app.py  cybersecurity_facts.txt  pyproject.toml
